[package]
name = "konfiguration"
version = "0.2.2"
rust-version = "1.60"
description = "Json configuration for Rust applications"
documentation = "https://docs.rs/konfiguration/"
homepage = "https://github.com/faveroferreira/konfiguration"
repository = "https://github.com/faveroferreira/konfiguration"
readme = "README.md"
keywords = ["config", "configuration", "settings", "env", "environment"]
authors = ["Guilherme Favero Ferreira <guifaveroferreira@gmail.com>"]
categories = ["config"]
license = "MIT/Apache-2.0"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-untagged = "0.1.1"
toml = "0.8.0"
anyhow = "1.0.75"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
