[package]
name = "konfiguration"
version = "1.1.0"
rust-version = "1.66.1"
description = "Toml configuration loader with environment variables support."
documentation = "https://docs.rs/konfiguration/"
homepage = "https://github.com/faveroferreira/konfiguration"
repository = "https://github.com/faveroferreira/konfiguration"
readme = "README.md"
keywords = ["config", "configuration", "settings", "env", "environment"]
authors = ["Guilherme Favero Ferreira <guifaveroferreira@gmail.com>"]
categories = ["config"]
license = "MIT"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
serde = "1.0"
serde-untagged = "0.1.1"
toml = "0.8.0"
thiserror = "1.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }

